feat: add HTTP caching and backend contact form
- Add HTTP caching configuration for static assets (365d cache period)
- Enable content-based cache busting for versioned static resources
- Implement backend contact form endpoint at /api/contact
- Add ContactRequest DTO with Jakarta validation constraints
- Add ContactController and ContactService for form processing
- Update frontend form to submit to backend with error handling
- Add validation messages in English and Dutch
- Add comprehensive tests for ContactController
- Disable CSRF for API endpoints to allow contact form submissions

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,14 @@ spring:
       - classpath:/config/career-en.yml
       - classpath:/config/career-nl.yml
       - classpath:/config/recommendations.yml
+  web:
+    resources:
+      cache:
+        period: 365d
+      chain:
+        strategy:
+          content:
+            enabled: true
+            paths: /**
+  jackson:
+    default-property-inclusion: non_null
